--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,82 @@
-aenum==2.2.3
-attrs==19.3.0
-autopep8==1.5.2
-backcall==0.1.0
-bleach==3.1.4
-cachetools==4.1.0
-certifi==2020.4.5.1
-chardet==3.0.4
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-demon==2.0.5
+aenum==3.1.5
+attrs==21.4.0
+autopep8==1.6.0
+backcall==0.2.0
+bleach==4.1.0
+cachetools==5.0.0
+certifi==2021.10.8
+chardet==4.0.0
+cycler==0.11.0
+decorator==5.1.1
+defusedxml==0.7.1
+demon==2.0.6
 entrypoints==0.3
 future==0.18.2
-html5lib==1.0.1
-idna==2.9
-importlib-metadata==1.6.0
-infomap==1.1.2
-ipykernel==5.2.1
-ipython==7.13.0
+html5lib==1.1
+idna==3.3
+importlib-metadata==4.10.0
+infomap==1.9.0
+ipykernel==6.6.1
+ipython==7.31.0
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.17.0
-Jinja2==2.11.2
-joblib==0.14.1
-jsonschema==3.2.0
+ipywidgets==7.6.5
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+jsonschema==4.3.3
 jupyter==1.0.0
-jupyter-client==6.1.3
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-kiwisolver==1.2.0
-MarkupSafe==1.1.1
-matplotlib==3.2.1
+jupyter-client==7.1.0
+jupyter-console==6.4.0
+jupyter-core==4.9.1
+kiwisolver==1.3.2
+MarkupSafe==2.0.1
+matplotlib==3.5.1
 mistune==0.8.4
-more-itertools==8.2.0
-nbconvert==5.6.1
-nbformat==5.0.6
-networkx==2.4
-notebook==6.0.3
-numpy==1.18.3
-oauthlib==3.1.0
-pandas==1.0.3
-pandocfilters==1.4.2
-parso==0.7.0
-patsy==0.5.1
+more-itertools==8.12.0
+nbconvert==6.4.0
+nbformat==5.1.3
+networkx==2.6.3
+notebook==6.4.6
+numpy==1.22.0
+oauthlib==3.1.1
+pandas==1.3.5
+pandocfilters==1.5.0
+parso==0.8.3
+patsy==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
-pquality==0.0.7
-prometheus-client==0.3.1
-prompt-toolkit==3.0.5
-ptyprocess==0.6.0
-pycodestyle==2.5.0
-Pygments==2.6.1
-pyparsing==2.4.7
-pyrsistent==0.16.0
+pquality==0.0.9
+prometheus-client==0.12.0
+prompt-toolkit==3.0.24
+ptyprocess==0.7.0
+pycodestyle==2.8.0
+Pygments==2.11.2
+pyparsing==3.0.6
+pyrsistent==0.18.0
 PySocks==1.7.1
-python-dateutil==2.8.1
-pytz==2019.3
-pyzmq==19.0.0
-qtconsole==4.7.3
-QtPy==1.9.0
-requests==2.23.0
-requests-cache==0.5.2
+python-dateutil==2.8.2
+pytz==2021.3
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.0
+requests==2.27.1
+requests-cache==0.9.0
 requests-oauthlib==1.3.0
-scikit-learn==0.22.2.post1
-scipy==1.4.1
-seaborn==0.10.0
-Send2Trash==1.5.0
+scikit-learn==1.0.2
+scipy==1.7.3
+seaborn==0.11.2
+Send2Trash==1.8.0
 simplegeneric==0.8.1
-six==1.14.0
-SQLAlchemy==1.3.16
-terminado==0.8.3
-testpath==0.4.4
-tornado==6.0.4
-tqdm==4.45.0
-traitlets==4.3.3
-TwitterAPI==2.5.11
-urllib3==1.25.9
-wcwidth==0.1.9
+six==1.16.0
+SQLAlchemy==1.4.29
+terminado==0.12.1
+testpath==0.5.0
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.1
+TwitterAPI==2.7.11
+urllib3==1.26.8
+wcwidth==0.2.5
 webencodings==0.5.1
-widgetsnbextension==3.5.1
-zipp==3.1.0
+widgetsnbextension==3.5.2
+zipp==3.7.0
